force-app/main/default/objects/Chat__c/fields/Running__c.field-meta.xml
<CustomField>
    <fullName>Running__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Running</label>
    <type>Checkbox</type>
</CustomField>