force-app/main/default/objects/Chat__c/fields/Total_3_5_Prompt_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Total_3_5_Prompt_Tokens__c</fullName>
    <label>Total 3.5 Prompt Tokens</label>
    <summarizedField>Message__c.Prompt_Tokens__c</summarizedField>
    <summaryFilterItems>
        <field>Message__c.Model__c</field>
        <operation>contains</operation>
        <value>gpt-3</value>
    </summaryFilterItems>
    <summaryForeignKey>Message__c.Thread__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>