force-app/main/default/objects/Chat__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>((Total_3_5_Completion_Tokens__c/1000)*0.002)+
 ((Total_3_5_Prompt_Tokens__c/1000)*0.0015)+
 ((Total_4_Completion_Tokens__c/1000)*0.06)+
 ((Total_4_Prompt_Tokens__c/1000)*0.03)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>